@@ -6,6 +6,7 @@
   rename WANT_DYNAMIC to WANT_CTOR, add WANT_EXCEPTIONS to dietfeatures.h
   libc can't call rand() and change the seed, so introduce rand_i (Christopher Wellons)
   add stdatomic.h
+  add dummy libdl functions for static linking that will just return failure
 
 0.34:
   move stpcpy from libcompat to lib as it is now part of POSIX (Enrico Scholz)
